# dytsi

./: AUTHORS  Makefile.am  Makefile.in  NEWS  README  README.md  aclocal.m4  configure  configure.ac
input/InputFiles/: inputBifurcation-Cooperrider-1600m.xml  inputBifurcation-Cooperrider-straight.xml  inputTransient-Cooperrider.xml  inputTransient-CooperriderAsymmetric.xml  inputTransient-CooperriderFixed.xml
src/: Makefile.am  Makefile.in
src/Application/: PrintingHandler.cpp  PrintingHandler.h  Simulation.cpp  Simulation.h  main.cpp  miscellaneous.cpp  miscellaneous.h
src/Application/Input/: Bifurcation.cpp  Bifurcation.h  Input.cpp  Input.h  InputHandler.cpp  InputHandler.h  RSGEOTableReader.cpp  RSGEOTableReader.h  Ramping.cpp  Ramping.h  Range.cpp  Range.h  Transient.cpp  Transient.h  TransientCurve.cpp  TransientCurve.h  XMLInputReader.cpp  XMLInputReader.h  XMLaux.cpp  XMLaux.h
src/Application/Output/: OutputHandler.cpp  OutputHandler.h
src/GeneralModel/: BogieFrameCarBodyConnector.cpp  BogieFrameCarBodyConnector.h  BogieFrameComponent.cpp  BogieFrameComponent.h  Bush.cpp  Bush.h  CarBodyComponent.cpp  CarBodyComponent.h  Component.cpp  Component.h  ComponentConnectorCouple.cpp  ComponentConnectorCouple.h  Connector.cpp  Connector.h  DYTSI_Modelling.h  ExternalComponents.cpp  ExternalComponents.h  Function.cpp  Function.h  GeneralModel.cpp  GeneralModel.h  IndependentDamper.cpp  IndependentDamper.h  IndependentSpring.cpp  IndependentSpring.h  InterpolationFunction.cpp  InterpolationFunction.h  LateralDamper.cpp  LateralDamper.h  LateralSpring.cpp  LateralSpring.h  LinearFunction.cpp  LinearFunction.h  Link.cpp  Link.h  LinkDamper.cpp  LinkDamper.h  LinkSpring.cpp  LinkSpring.h  LongitudinalDamper.cpp  (+27 more)
src/Models/: CooperriderModel.cpp  CooperriderModel.h  CooperriderOrthoAsymFixedModel.cpp  CooperriderOrthoAsymFixedModel.h  CooperriderOrthogonalAsymmetricModel.cpp  CooperriderOrthogonalAsymmetricModel.h  CooperriderOrthogonalFixedModel.cpp  CooperriderOrthogonalFixedModel.cpp~  CooperriderOrthogonalFixedModel.h  CooperriderOrthogonalModel.cpp  CooperriderOrthogonalModel.h  DYTSI_Models.h
src/Solver/: BDFSolver.cpp  BDFSolver.h  BulirschStoerSolver.cpp  BulirschStoerSolver.h  DYTSI_Solvers.h  RK4Explicit.cpp  RK4Explicit.h  RK4ImplicitAtGaussianPoints.cpp  RK4ImplicitAtGaussianPoints.h  SDIRKSolver.cpp  SDIRKSolver.h  Solution.cpp  Solution.h  Solver.cpp  Solver.h  gsl_odeiv_ext.h
src/Solver/SDIRK/: divctrl.cpp  divctrl.h  dmatrix.cpp  dmatrix.h  dvector.cpp  dvector.h  gsl_sdirk.cpp  ivector.cpp  ivector.h  lufac.cpp  lufac.h  newtbase.cpp  newtbase.h  rkbase.cpp  rkbase.h  sdirk.cpp  sdirk.h  sdirknewt.cpp  sdirknewt.h  step.cpp  step.h  stepbase.cpp  stepbase.h  types.cpp  types.h
