BOOST_FILESYSTEM_LIB = -lboost_filesystem
BOOST_SYSTEM_LIB = -lboost_system
CXXFLAGS += -Wall @GSL_CFLAGS@ @XERCES_CFLAGS@
LIBS += @GSL_LIBS@ @XERCES_LIBS@ @BOOST_FILESYSTEM_LIB@ @BOOST_SYSTEM_LIB@

bin_PROGRAMS=DYTSI

DYTSI_SOURCES= Application/main.cpp \
            Application/Simulation.cpp \
            Application/miscellaneous.cpp \
            Application/PrintingHandler.cpp \
            Application/Input/Bifurcation.cpp \
            Application/Input/Input.cpp \
            Application/Input/InputHandler.cpp \
            Application/Input/Ramping.cpp \
            Application/Input/RSGEOTableReader.cpp \
            Application/Input/Transient.cpp \
            Application/Input/TransientCurve.cpp \
            Application/Input/XMLInputReader.cpp \
            Application/Input/XMLaux.cpp \
            Application/Input/Range.cpp \
            Application/Output/OutputHandler.cpp \
            GeneralModel/BogieFrameCarBodyConnector.cpp \
            GeneralModel/BogieFrameComponent.cpp \
            GeneralModel/Bush.cpp \
            GeneralModel/CarBodyComponent.cpp \
            GeneralModel/Component.cpp \
            GeneralModel/ComponentConnectorCouple.cpp \
            GeneralModel/Connector.cpp \
            GeneralModel/ExternalComponents.cpp \
            GeneralModel/Function.cpp \
            GeneralModel/GeneralModel.cpp \
            GeneralModel/IndependentDamper.cpp \
            GeneralModel/IndependentSpring.cpp \
            GeneralModel/InterpolationFunction.cpp \
            GeneralModel/LateralDamper.cpp \
            GeneralModel/LateralSpring.cpp \
            GeneralModel/LinearFunction.cpp \
            GeneralModel/Link.cpp \
            GeneralModel/LinkDamper.cpp \
            GeneralModel/LinkSpring.cpp \
            GeneralModel/LongitudinalDamper.cpp \
            GeneralModel/LongitudinalSpring.cpp \
            GeneralModel/PieceWiseLinearFunction.cpp \
            GeneralModel/PieceWiseValues.cpp \
            GeneralModel/RSGEOTable.cpp \
            GeneralModel/Thread.cpp \
            GeneralModel/VectorDamper.cpp \
            GeneralModel/VectorSpring.cpp \
            GeneralModel/VerticalDamper.cpp \
            GeneralModel/VerticalShearSpring.cpp \
            GeneralModel/VerticalSpring.cpp \
            GeneralModel/WheelSetBogieFrameConnector.cpp \
            GeneralModel/WheelSetComponent.cpp \
            Models/CooperriderModel.cpp \
            Models/CooperriderOrthogonalModel.cpp \
            Models/CooperriderOrthogonalAsymmetricModel.cpp \
            Models/CooperriderOrthoAsymFixedModel.cpp \
            Solver/Solution.cpp \
            Solver/Solver.cpp \
            Solver/BulirschStoerSolver.cpp \
            Solver/BDFSolver.cpp \
            Solver/RK4Explicit.cpp \
            Solver/RK4ImplicitAtGaussianPoints.cpp \
            Solver/SDIRKSolver.cpp \
            Solver/SDIRK/divctrl.cpp \
            Solver/SDIRK/dmatrix.cpp \
            Solver/SDIRK/dvector.cpp \
            Solver/SDIRK/gsl_sdirk.cpp \
            Solver/SDIRK/ivector.cpp \
            Solver/SDIRK/lufac.cpp \
            Solver/SDIRK/newtbase.cpp \
            Solver/SDIRK/rkbase.cpp \
            Solver/SDIRK/sdirk.cpp \
            Solver/SDIRK/sdirknewt.cpp \
            Solver/SDIRK/step.cpp \
            Solver/SDIRK/stepbase.cpp \
            Solver/SDIRK/types.cpp

#DYTSIdir= $(includedir)/DYTSI
 
noinst_HEADERS= Application/Simulation.h \
            Application/miscellaneous.h \
            Application/PrintingHandler.h \
            Application/Input/Bifurcation.h \
            Application/Input/Input.h \
            Application/Input/InputHandler.h \
            Application/Input/Ramping.h \
            Application/Input/RSGEOTableReader.h \
            Application/Input/Transient.h \
            Application/Input/TransientCurve.h \
            Application/Input/XMLInputReader.h \
            Application/Input/XMLaux.h \
            Application/Input/Range.h \
            Application/Output/OutputHandler.h \
            GeneralModel/BogieFrameCarBodyConnector.h \
            GeneralModel/BogieFrameComponent.h \
            GeneralModel/Bush.h \
            GeneralModel/CarBodyComponent.h \
            GeneralModel/Component.h \
            GeneralModel/ComponentConnectorCouple.h \
            GeneralModel/Connector.h \
            GeneralModel/DYTSI_Modelling.h \
            GeneralModel/enumDeclarations.h \
            GeneralModel/ExternalComponents.h \
            GeneralModel/Function.h \
            GeneralModel/GeneralModel.h \
            GeneralModel/IndependentDamper.h \
            GeneralModel/IndependentSpring.h \
            GeneralModel/InterpolationFunction.h \
            GeneralModel/LateralDamper.h \
            GeneralModel/LateralSpring.h \
            GeneralModel/LinearFunction.h \
            GeneralModel/Link.h \
            GeneralModel/LinkDamper.h \
            GeneralModel/LinkSpring.h \
            GeneralModel/LongitudinalDamper.h \
            GeneralModel/LongitudinalSpring.h \
            GeneralModel/PieceWiseLinearFunction.h \
            GeneralModel/PieceWiseValues.h \
            GeneralModel/RSGEOTable.h \
            GeneralModel/Thread.h \
            GeneralModel/VectorDamper.h \
            GeneralModel/VectorSpring.h \
            GeneralModel/VerticalDamper.h \
            GeneralModel/VerticalShearSpring.h \
            GeneralModel/VerticalSpring.h \
            GeneralModel/WheelSetBogieFrameConnector.h \
            GeneralModel/WheelSetComponent.h \
            Models/DYTSI_Models.h \
            Models/CooperriderModel.h \
            Models/CooperriderOrthogonalModel.h \
            Models/CooperriderOrthogonalAsymmetricModel.h \
            Models/CooperriderOrthoAsymFixedModel.h \
            Solver/DYTSI_Solvers.h \
            Solver/gsl_odeiv_ext.h \
            Solver/Solution.h \
            Solver/Solver.h \
            Solver/BulirschStoerSolver.h \
            Solver/BDFSolver.h \
            Solver/RK4Explicit.h \
            Solver/RK4ImplicitAtGaussianPoints.h \
            Solver/SDIRKSolver.h \
            Solver/SDIRK/divctrl.h \
            Solver/SDIRK/dmatrix.h \
            Solver/SDIRK/dvector.h \
            Solver/SDIRK/ivector.h \
            Solver/SDIRK/lufac.h \
            Solver/SDIRK/newtbase.h \
            Solver/SDIRK/rkbase.h \
            Solver/SDIRK/sdirk.h \
            Solver/SDIRK/sdirknewt.h \
            Solver/SDIRK/step.h \
            Solver/SDIRK/stepbase.h \
            Solver/SDIRK/types.h
